build(all): update all packages to certain values

--- a/mails/magic.html
+++ b/mails/magic.html
@@ -100,7 +100,7 @@
   <div style="background-color:#F8F9FA;">
     <!--[if mso | IE]>
       <table
-         align="center" border="0" cellpadding="0" cellspacing="0" style="width:600px;" width="600"
+         align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600"
       >
         <tr>
           <td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;">
@@ -116,7 +116,7 @@
         <tr>
       
             <td
-               style="vertical-align:top;width:600px;"
+               class="" style="vertical-align:top;width:600px;"
             >
           <![endif]-->
               <div class="mj-column-per-100 outlook-group-fix" style="font-size:13px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
@@ -167,7 +167,7 @@
                     <td vertical-align="top" style="font-size:0px;padding:20px 0;word-break:break-word;">
                       <!--[if mso | IE]>
       <table
-         align="center" border="0" cellpadding="0" cellspacing="0" style="width:600px;" width="600"
+         align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600"
       >
         <tr>
           <td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;">
@@ -183,7 +183,7 @@
         <tr>
       
             <td
-               style="vertical-align:top;width:600px;"
+               class="" style="vertical-align:top;width:600px;"
             >
           <![endif]-->
                                 <div class="mj-column-per-100 outlook-group-fix" style="font-size:13px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
