--- a/mails/invite.html
+++ b/mails/invite.html
@@ -97,10 +97,10 @@
 </head>
 
 <body>
-  <div>
+  <div style="">
     <!--[if mso | IE]>
       <table
-         align="center" border="0" cellpadding="0" cellspacing="0" style="width:600px;" width="600"
+         align="center" border="0" cellpadding="0" cellspacing="0" class="" style="width:600px;" width="600"
       >
         <tr>
           <td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;">
@@ -116,7 +116,7 @@
         <tr>
       
             <td
-               style="vertical-align:top;width:600px;"
+               class="" style="vertical-align:top;width:600px;"
             >
           <![endif]-->
               <div class="mj-column-per-100 outlook-group-fix" style="font-size:13px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
